# spcplay-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  spcplay.rs
