[package]
name = "spcplay-rs"
version = "0.1.0"
authors = ["nyanpasu64 <nyanpasu64@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
directories = "4.0.1"
eframe = "0.14.0" # Gives us egui, epi and web+native backends
rusqlite = "0.25.3"

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
