[package]
name = "spcplay-rs"
version = "0.1.0"
authors = ["nyanpasu64 <nyanpasu64@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
directories = "4.0.1"
# Gives us egui, epi and web+native backends
eframe = { version = "0.14.0", default-features = false } # Disable bundled fonts
rusqlite = "0.25.3"
snes-apu = { path = "3rdparty/snes-apu" }
spc = { path = "3rdparty/spc" }

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
